--- a/def/blocking.tex
+++ b/def/blocking.tex
@@ -1,7 +1,6 @@
-\section*{Blocking Notice}
+\section*{confidentiality clause}
 \textcolor{red}{
-Die vorliegende Arbeit beinhaltet interne und vertrauliche Informationen der Firma <Firmenname>.
-Die Weitergabe des Inhalts der Arbeit im Gesamten oder in Teilen sowie das Anfertigen
-von Kopien oder Abschriften - auch in digitaler Form - sind grundsätzlich untersagt.
-Ausnahmen bedürfen der schriftlichen Genehmigung der Firma <Firmenname>.
+This bachelor thesis contains confidential data of company $\href{https://de.worldline.com/}{Worldline \ GmbH \ Konstanz}$.\\ \\
+This work may only be made available to the first and second reviewers and authorized members of the board of examiners. Any publication and duplication of this bachelor thesis - even in part - is prohibited.\\\\
+ An inspection of this work by third parties requires the expressed permission of the author and company $\href{https://de.worldline.com/}{Worldline \ GmbH \ Konstanz}$.
 }
