--- a/def/cover.tex
+++ b/def/cover.tex
@@ -14,7 +14,7 @@
 \textbf{{\Large Bachelor Thesis}}\\
 \vspace*{40mm}
 
-\textbf{{\Large \textit{Containerization}}}\\ \vspace*{5mm}
+\textbf{{\Large \textit{Containerization of Software Packages}}}\\ \vspace*{5mm}
 {at the company }\\
 \vspace*{10mm}
 {\Large \textsc{Worldline GmbH Konstanz}}\\
@@ -39,7 +39,7 @@
 {\large \textbf{Konstanz University}}\\ \vspace*{5mm}
 {Technology, Economy and Design \\ \vspace*{1mm} Faculty of Computer Science  \\ \vspace*{1mm} 
 Course of studies Applied Computer Science}\\ \vspace*{10mm}
-{\LARGE \textbf{\textit{Containerization}}} 
+{\LARGE \textbf{\textit{Containerization of Software Packages }}} 
 
 }
 \vspace*{20mm}
