--- a/def/declaration.tex
+++ b/def/declaration.tex
@@ -1,23 +1,26 @@
-\section*{Statutory Declaration}
+\section*{ Statutory Declaration  }
 \thispagestyle{empty}
 
 \begin{verbatim}
 
 \end{verbatim}
 
-\begin{LARGE}Eidesstattliche Erklärung zur <-Arbeit>\end{LARGE}
-\begin{verbatim}
 
 
-\end{verbatim}
-Ich versichere, die von mir vorgelegte Arbeit selbstständig verfasst zu haben. Alle Stellen, die wörtlich oder sinngemäß aus veröffentlichten oder nicht veröffentlichten Arbeiten anderer entnommen sind, habe ich als entnommen kenntlich gemacht. Sämtliche Quellen und Hilfsmittel, die ich für die Arbeit benutzt habe, sind angegeben. Die Arbeit hat mit gleichem Inhalt bzw. in wesentlichen Teilen noch keiner anderen Prüfungsbehörde vorgelegen.
+I certify that this thesis does not incorporate without acknowledgement any material
+previously submitted for a degree or diploma in any university; and that to the best of
+my knowledge and belief it does not contain any material previously published or written
+by another person where due reference is not made in the text.
 
 
+\begin{flushleft}
+Signature :
 
-\begin{displaymath}
-% use packages: array
-\begin{array}{ll}
-Unterschrift:~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-& Ort, Datum:~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-\end{array}
-\end{displaymath}
+\end{flushleft}
+
+ 
+\begin{flushright}
+Konstanz \today
+
+\end{flushright} 
+ 
