--- a/def/declaration.tex
+++ b/def/declaration.tex
@@ -5,22 +5,21 @@
 
 \end{verbatim}
 
-
-
+\textcolor{blue}{
 I certify that this thesis does not incorporate without acknowledgement any material
 previously submitted for a degree or diploma in any university; and that to the best of
 my knowledge and belief it does not contain any material previously published or written
 by another person where due reference is not made in the text.
-
+}
 
 \begin{flushleft}
-Signature :
+\textcolor{blue}{Signature :}
 
 \end{flushleft}
 
  
 \begin{flushright}
-Konstanz \today
+\textcolor{blue}{Konstanz \today}
 
 \end{flushright} 
  
