--- a/def/cover.tex
+++ b/def/cover.tex
@@ -16,10 +16,13 @@
 
 \textbf{{\Large \textit{Containerization of Software Packages}}}\\ \vspace*{5mm}
 {at the company }\\
+\begin{figure}[h]
+\centering
+\includegraphics{fig/wl.jpg}
+\label{fig:unilogo}
+\end{figure}
 \vspace*{10mm}
-{\Large \textsc{Worldline GmbH Konstanz}}\\
-\vspace*{15mm}
-{\Large Aiham Abou Saleh}
+{\Large \textsc{Worldline Germany GmbH}}
 
 }
 
@@ -32,7 +35,7 @@
 \vspace*{15mm}
 {\Huge \textbf{Bachelor Thesis}}\\ \vspace*{5mm}
 \emph{for obtaining the academic degree \\ \vspace*{5mm}
-{\LARGE \textbf{Bachelor of Science (B.Sc.)}} }\\
+{\LARGE \textbf{\textcolor{blue}{Bachelor of Science (B.Sc.) \\ Software Engineering}}} }\\
 \vspace*{10mm}
 {at}\\
 \vspace*{10mm}
@@ -44,10 +47,10 @@ Course of studies Applied Computer Science}\\ \vspace*{10mm}
 }
 \vspace*{20mm}
 \begin{tabbing}
-\hspace*{4cm}Presented by: \hspace*{0.5cm}\= Aiham Abou Saleh \\
-\hspace*{4cm}Imm Nr:  \>  292689\\
-\hspace*{4cm}Supervisor: \> Prof. Dr. Eiglsperger\\
-\hspace*{4cm}Supervisor: \> Julian Weißgerber\\
-\hspace*{4cm}Submission: \> \today
+\hspace*{4cm}\textit{Presented by:} \hspace*{1.2cm}\= Aiham Abou Saleh \\
+\hspace*{4cm}\textit{Imm Nr:}  \>  292689\\
+\hspace*{4cm}\textit{First supervisor:} \> Prof. Dr. Eiglsperger\\
+\hspace*{4cm}\textit{Second supervisor:} \> M.Sc. Julian Weißgerber\\
+\hspace*{4cm}\textit{Submission:} \> \today
 \end{tabbing}
 \end{titlepage}
