--- a/introduction.tex
+++ b/introduction.tex
@@ -1,7 +1,9 @@
-\section*{Introduction} 
-\subsection*{Company}
+\section{Introduction} 
 
-3323
-\subsection*{RSP}
-2
-\subsection*{IIOT}
+This section of the bachelor thesis is a short insight into the Worldline GmbH Konstanz. Then the background and the motivation as well as the aim of this thesis is described. Afterwards a short explanation to the structure of this work will be given.
+
+\subsection{Worldline Company}
+about 
+\cite{1}
+\subsection{Motivation}
+
