--- a/thesis.tex
+++ b/thesis.tex
@@ -86,7 +86,7 @@
 
 
 
-\addcontentsline{toc}{section}{Introduction}
+%\addcontentsline{toc}{section}{Introduction}
 \input{introduction}
 \clearpage
 
