--- a/def/blocking.tex
+++ b/def/blocking.tex
@@ -1,6 +1,6 @@
-\section*{confidentiality clause}
+\section*{Confidentiality Agreement}
 \textcolor{red}{
-This bachelor thesis contains confidential data of company $\href{https://de.worldline.com/}{Worldline \ GmbH \ Konstanz}$.\\ \\
+This bachelor thesis contains confidential data of company $\href{https://worldline.com/}{Worldline \ Germany \ GmbH }$.\\ \\
 This work may only be made available to the first and second reviewers and authorized members of the board of examiners. Any publication and duplication of this bachelor thesis - even in part - is prohibited.\\\\
- An inspection of this work by third parties requires the expressed permission of the author and company $\href{https://de.worldline.com/}{Worldline \ GmbH \ Konstanz}$.
+ An inspection of this work by third parties requires the expressed permission of the author and company $\href{https://worldline.com/}{Worldline \ Germany \ GmbH }$.
 }
