--- a/def/declaration.tex
+++ b/def/declaration.tex
@@ -1,15 +1,26 @@
-\section*{ Statutory Declaration  }
+\section*{ Declaration of Authorship  }
 \thispagestyle{empty}
 
 \begin{verbatim}
 
 \end{verbatim}
-
+\noindent 
 \textcolor{blue}{
-I certify that this thesis does not incorporate without acknowledgement any material
-previously submitted for a degree or diploma in any university; and that to the best of
-my knowledge and belief it does not contain any material previously published or written
-by another person where due reference is not made in the text.
+I declare that this thesis titled, "Containerization of Software Packages" and the work
+presented in it are my own.\\ I confirm that:
+\begin{itemize}
+\item This work was done wholly or mainly while in candidature for a research degree at this University.
+\item Where any part of this thesis has previously been submitted for a degree or any other qualification at this University or any other institution, this has been clearly stated.
+\item Where I have consulted the published work of others, this is always
+clearly attributed.
+\item Where I have quoted from the work of others, the source is always
+given. With the exception of such quotations, this thesis is entirely
+my own work.
+\item I have acknowledged all main sources of help.
+\item  Where the thesis is based on work done by myself jointly with others,
+I have made clear exactly what was done by others and what I have
+contributed myself.
+\end{itemize}
 }
 
 \begin{flushleft}
@@ -19,7 +30,7 @@ by another person where due reference is not made in the text.
 
  
 \begin{flushright}
-\textcolor{blue}{Konstanz \today}
+\textcolor{blue}{Data :  \today}
 
 \end{flushright} 
  
