--- a/def/init.tex
+++ b/def/init.tex
@@ -2,14 +2,14 @@
 \documentclass[a4paper,12pt,headsepline]{scrartcl}
 
 \usepackage{graphicx}
-\usepackage{ngerman}
+
 
 % Inhaltsverzechnis mit Punkten
 \usepackage{tocloft}
 \renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}}
 
 % deutsche Silbentrennung
-\usepackage[ngerman, english]{babel}
+\usepackage[english]{babel}
 
 % Umlaute unter UTF8 nutzen
 \usepackage[utf8]{inputenc}
