--- a/abstract.tex
+++ b/abstract.tex
@@ -1,6 +1,5 @@
 \newpage
 \section*{Abstract}
-chtlichen Wissens stammt aus schriftlichen Aufzeichnungen, die archiviert wurden oder zufällig erhalten blieben. Texte aus Kulturen mit einer schriftlichen Die Abkürzung SQL   steht im Abkürzungsverzeichnis.  Überlieferungstradition   
-
+LATER
 
 \newpage
