--- a/def/abbreviations.tex
+++ b/def/abbreviations.tex
@@ -1,20 +1,8 @@
 
-\abk{UGC}{User Generated Content}
-\nomenclature{CSS}{Cascading Style Sheets}
-\nomenclature{JS}{JavaScript}
-\nomenclature{SQL}{Structured Query Language}
-\nomenclature{GPL}{GNU General Public License}
-\nomenclature{GNU}{GNU is not Unix}
-\nomenclature{LGPL}{GNU Lesser General Public License}
-\nomenclature{XMPP}{Extensible Messaging and Presence Protocol}
-\nomenclature{IM}{Instant Message}
-\nomenclature{CMS}{Content Management System}
-\nomenclature{RSS}{Really Simple Syndication}
-\nomenclature{JSON}{JavaScript Object Notation}
-\nomenclature{HTML}{Hypertext Markup Language}
-\nomenclature{TDD}{Test-driven development}
-\nomenclature{GUI}{Graphical User Interface}
-\nomenclature{KPI}{Key Performance Indicator}
-\nomenclature{WWW}{World Wide Web}
-\nomenclature{OCR}{Optical Character Recognition}
-\nomenclature{ERM}{Entity Relationship Modell}
+\nomenclature{RSP}{Remote Service Platforms}
+\abk{IIOT}{Industrial Internet of Things }
+\abk{cRSP}{common Remote Service Platform }
+\abk{CCP}{Core Communication Platform}
+\abk{RPM}{Red Hat Package Manager}
+ \abk{CI}{Continuous Integration}
+ 
