--- a/mainbib.bib
+++ b/mainbib.bib
@@ -1,10 +1,36 @@
 
+ 
 
-
-@ONLINE{1,
+@ONLINE{worldline,
     author    			= {Worldline GmbH},
-    howpublished       = {\url{https://worldline.com/}},
-    note 	 		    = {Accessed on 10-05-2018}
+    url       = {https://worldline.com/en/home/about-us/our-story.html},
+   urldate = {2018-05-15}
 }
 
+@ONLINE{whatis,
+   author    	  = {Margaret Rouse},
+   title = {Monolithic architecture},
+   url   = {https://whatis.techtarget.com/definition/monolithic-architecture},
+ urldate = {2018-05-15}
+}
+
+@ONLINE{mono1,
+   author    	  = {Gaurav Aroraa, Lalit Kale and Kanwar Manish},
+   title = {Building Microservices with .NET Core},
+   url   = {https://www.packtpub.com/mapt/book/web_development/9781785887833/1/ch01lvl1sec9/understanding-problems-with-the-monolithic-architecture-style},
+ urldate = {2018-05-15}
+}
+
+
+ @ONLINE{mono2,
+    author  = {Jean-Philippe Gouigoux and Dalila Tamzalit},
+    title   = {From Monolith to Microservices: Lessons Learned on an Industrial Migration to a Web Oriented Architecture},
+ url = {https://ieeexplore.ieee.org/document/7958457/},
+    urldate = {2018-05-15}
+
+ }
  
+ 
+ 
+
+
