--- a/def/cover.tex
+++ b/def/cover.tex
@@ -14,7 +14,7 @@
 \textbf{{\Large Bachelor Thesis}}\\
 \vspace*{40mm}
 
-\textbf{{\Large \textit{Containerization of Software Packages}}}\\ \vspace*{5mm}
+\textbf{{\Large \textit{Containerization of Software Packages for IIoT}}}\\ \vspace*{5mm}
 {at the company }\\
 \begin{figure}[h]
 \centering
@@ -39,18 +39,18 @@
 \vspace*{10mm}
 {at}\\
 \vspace*{10mm}
-{\large \textbf{Konstanz University}}\\ \vspace*{5mm}
+{\large \textbf{Konstanz University of Applied Sciences}}\\ \vspace*{5mm}
 {Technology, Economy and Design \\ \vspace*{1mm} Faculty of Computer Science  \\ \vspace*{1mm} 
 Course of studies Applied Computer Science}\\ \vspace*{10mm}
-{\LARGE \textbf{\textit{Containerization of Software Packages }}} 
+{\LARGE \textbf{\textit{Containerization of Software Packages for IIoT }}} 
 
 }
 \vspace*{20mm}
 \begin{tabbing}
-\hspace*{4cm}\textit{Presented by:} \hspace*{1.2cm}\= Aiham Abou Saleh \\
+\hspace*{4cm}\textit{Presented by:} \hspace*{1.2cm}\= Aiham Abusaleh \\
 \hspace*{4cm}\textit{Imm Nr:}  \>  292689\\
-\hspace*{4cm}\textit{First supervisor:} \> Prof. Dr. Eiglsperger\\
-\hspace*{4cm}\textit{Second supervisor:} \> M.Sc. Julian Weißgerber\\
+\hspace*{4cm}\textit{Supervisor:} \> Prof. Dr. Eiglsperger\\
+\hspace*{4cm}\textit{Co-supervisor:} \> M.Sc. Julian Weißgerber\\
 \hspace*{4cm}\textit{Submission:} \> \today
 \end{tabbing}
 \end{titlepage}
